<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>r</module>
        <module>armadillo</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.12</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.molgenis</groupId>
    <artifactId>armadillo-service</artifactId>
    <version>2.2.4-SNAPSHOT</version>
    <name>armadillo-service</name>
    <description>MOLGENIS Armadillo</description>
    <organization>
        <name>MOLGENIS</name>
        <url>https://molgenis.org</url>
    </organization>

    <scm>
        <developerConnection>
            scm:git:https://${env.GITHUB_USER}:${env.GITHUB_TOKEN}@github.com/molgenis/molgenis-service-datashield
        </developerConnection>
        <url>https://github.com/molgenis/molgenis-service-datashield</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>registry.molgenis.org</id>
            <url>https://registry.molgenis.org/repository/maven-snapshots</url>
        </snapshotRepository>
        <repository>
            <id>registry.molgenis.org</id>
            <name>Registry of the MOLGENIS organisation</name>
            <url>https://registry.molgenis.org/repository/maven-releases/</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.scm.id>github</project.scm.id>

        <java.version>17</java.version>

        <!-- authentication for release scm plugin -->
        <project.scm.id>github</project.scm.id>

        <fmt-maven-plugin.version>2.13</fmt-maven-plugin.version>
        <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
        <release-maven-plugin.version>2.5.3</release-maven-plugin.version>
        <reproducable-build-plugin.version>0.15</reproducable-build-plugin.version>
        <jib-maven-plugin.version>3.2.1</jib-maven-plugin.version>

        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>molgenis</sonar.organization>
        <sonar.github.repository>molgenis/molgenis-service-armadillo</sonar.github.repository>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
        <sonar.coverage.exclusions>**/*Config.*</sonar.coverage.exclusions>

        <auto-value.version>1.9</auto-value.version>
        <auto-service-annotations.version>1.0.1</auto-service-annotations.version>

        <RServe.version>1.8.1</RServe.version>
        <REngine.version>2.1.0</REngine.version>
        <guava.version>31.1-jre</guava.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.rosuda.REngine</groupId>
                <artifactId>REngine</artifactId>
                <version>${REngine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rosuda.REngine</groupId>
                <artifactId>Rserve</artifactId>
                <version>${RServe.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.auto.value</groupId>
                <artifactId>auto-value-annotations</artifactId>
                <version>${auto-value.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.9</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>2.2.2</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.11.0</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>1.6.9</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>6.0.13</version>
            </dependency>
            <!-- https://github.com/spring-projects/spring-boot/issues/21939 -->
            <dependency>
                <groupId>net.minidev</groupId>
                <artifactId>json-smart</artifactId>
                <version>[2.3,3.0)</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.coveo</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>${fmt-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>pre-unit-test</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>post-unit-test</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludes>
                            <exclude>**/*Config.*</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                                <version>2.4.1</version>
                            </path>
                            <path>
                                <groupId>com.google.auto.value</groupId>
                                <artifactId>auto-value</artifactId>
                                <version>${auto-value.version}</version>
                            </path>
                            <!--
                            Manually pull in auto-service-annotations so that it is part of the
                            processor path because auto-value has it set to provided scope.
                            This dependency is needed due to the retention change in
                            https://github.com/google/auto/commit/628df548685b4fc0f2a9af856f97cc2a68da246b
                            where the RetentionPolicy changed from SOURCE to CLASS.
                            Due to the RetentionPolicy change to CLASS we must have the
                            annotations available on the processor path otherwise the following
                            will error will be thrown. (This is a particular problem with the
                            annotation processor configuration in IntelliJ)
                            Error:java: java.lang.NoClassDefFoundError: com/google/auto/service/AutoService
                              com.google.auto.service.AutoService
                            -->
                            <path>
                                <groupId>com.google.auto.service</groupId>
                                <artifactId>auto-service-annotations</artifactId>
                                <version>${auto-service-annotations.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${release-maven-plugin.version}</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <scmCommentPrefix>[ci skip] [maven-release-plugin]${line.separator}</scmCommentPrefix>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.github.zlika</groupId>
                <artifactId>reproducible-build-maven-plugin</artifactId>
                <version>${reproducable-build-plugin.version}</version>
                <executions>
                    <execution>
                        <id>strip-jar</id>
                        <goals>
                            <goal>strip-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.coveo</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
